--- a/src/pages/About/About.css
+++ b/src/pages/About/About.css
@@ -244,6 +244,10 @@
     margin-bottom: 1rem;
   }
 
+  .about-intro {
+    margin-bottom: 1rem;
+  }
+
   .about-left h2 {
     font-size: 1.5rem;
     margin-top: 0;
