--- a/src/pages/navbar/Navbar.css
+++ b/src/pages/navbar/Navbar.css
@@ -180,6 +180,7 @@ body, html {
   }
 
   .nav-links .nav-mobile-extra {
+    all: unset;
     display: flex;
     flex-direction: column;
     align-items: center;
