--- a/src/pages/Home/Home.css
+++ b/src/pages/Home/Home.css
@@ -35,6 +35,7 @@
   height: auto;
   z-index: 5;
   animation: fadeInDown 1.2s ease;
+  margin-bottom: -40px;
 }
 
 .slogan {
@@ -118,6 +119,10 @@
 
 /* ---------- RESPONSIVE ---------- */
 @media screen and (max-width: 768px) {
+  .slogan {
+    font-size: 1.4rem;
+    max-width: 90%;
+  }
   .slogan {
     font-size: 1rem;
     line-height: 1.4;
